chore: snapshot global avant decoupage