@@ -2,27 +2,33 @@ package com.footballdemo.football_family.model;
 
 import jakarta.persistence.*;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.*;
+import lombok.Getter;
+import lombok.Setter;
+import lombok.NoArgsConstructor;
+import lombok.AllArgsConstructor;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import com.fasterxml.jackson.annotation.JsonBackReference;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 
 @Entity
-@Table(name = "users", uniqueConstraints = {
-        @UniqueConstraint(columnNames = "username"),
-        @UniqueConstraint(columnNames = "email")
-}, indexes = {
-        @Index(name = "idx_username", columnList = "username"),
-        @Index(name = "idx_email", columnList = "email")
-})
+@Table(
+        name = "users",
+        uniqueConstraints = {
+                @UniqueConstraint(columnNames = "username"),
+                @UniqueConstraint(columnNames = "email")
+        },
+        indexes = {
+                @Index(name = "idx_username", columnList = "username"),
+                @Index(name = "idx_email", columnList = "email")
+        }
+)
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
 public class User {
 
     @Id
@@ -36,272 +42,103 @@ public class User {
 
     private String email;
 
-    @Column(length = 255) // Assurez-vous d'avoir une taille appropriée
     private String avatarUrl;
 
-    // 🎭 RÔLES
+    // ==========================================================
+    // SIRET / ORGANISATION
+    // ==========================================================
+    @Column(length = 14)
+    private String siret;
+
+    @Column(length = 150)
+    private String organizationName;
+
+    // ==========================================================
+    // ROLES
+    // ==========================================================
     @ElementCollection(fetch = FetchType.EAGER)
     @CollectionTable(name = "user_roles", joinColumns = @JoinColumn(name = "user_id"))
     @Enumerated(EnumType.STRING)
     @Column(name = "role")
     private Set<UserRole> roles = new HashSet<>();
 
-    // 🏢 RELATION AVEC CLUB
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "club_id")
-    private Club club;
+    public void addRole(UserRole role) {
+        roles.add(role);
+    }
 
-    // 📋 CHAMPS POUR LES ORGANISATEURS
-    @Column(length = 14)
-    private String siret;
+    public boolean hasRole(UserRole role) {
+        return roles.contains(role);
+    }
 
-    @Column(length = 100)
-    private String organizationName;
+    public String getHighestRole() {
+        if (roles.contains(UserRole.SUPER_ADMIN)) return "SUPER_ADMIN";
+        if (roles.contains(UserRole.CLUB_ADMIN)) return "CLUB_ADMIN";
+        if (roles.contains(UserRole.COACH)) return "COACH";
+        if (roles.contains(UserRole.PLAYER)) return "PLAYER";
+        return "USER";
+    }
 
+    // ==========================================================
+    // VERIFICATION UTF
+    // ==========================================================
     @Column(nullable = false)
     private Boolean verified = false;
 
+    public boolean isVerified() {
+        return Boolean.TRUE.equals(verified);
+    }
+
     private LocalDate verifiedAt;
 
-    // 🔹 ÉVÉNEMENTS ORGANISÉS
+    // ==========================================================
+    // RELATION AVEC CLUBS (via ClubUser)
+    // ==========================================================
+    @OneToMany(mappedBy = "user", cascade = CascadeType.ALL, orphanRemoval = true)
+    @JsonIgnore
+    private List<ClubUser> clubUsers = new ArrayList<>();
+
+    // Retourne LE club principal du user
+    public Long getPrimaryClubId() {
+        if (clubUsers == null || clubUsers.isEmpty()) return null;
+        return clubUsers.get(0).getClub().getId();
+    }
+
+    // Retourne TOUS les clubs du user
+    public List<Long> getClubIds() {
+        return clubUsers.stream()
+                .map(cu -> cu.getClub().getId())
+                .toList();
+    }
+
+    // ==========================================================
+    // RELATIONS EVENTS
+    // ==========================================================
     @OneToMany(mappedBy = "organizer")
+    @JsonIgnore
     private List<Event> eventsOrganized = new ArrayList<>();
 
-    // 🔹 INSCRIPTIONS AUX ÉVÉNEMENTS
     @OneToMany(mappedBy = "player")
+    @JsonIgnore
     private List<EventRegistration> registrations = new ArrayList<>();
 
-    // 🔹 ÉQUIPES ENTRAÎNÉES
-    @OneToMany(mappedBy = "coach")
-    private List<Team> teamsCoached = new ArrayList<>();
-
-    // 🔹 ÉQUIPE DU JOUEUR
-    @ManyToOne
-    @JoinColumn(name = "team_id")
-    @JsonBackReference
-    private Team team;
-
-    // 👤 CONSTRUCTEURS
-    public User() {
-        this.roles.add(UserRole.USER); // Rôle par défaut
-    }
-
-    public User(String username, String email, String password) {
-        this.username = username;
-        this.email = email;
-        this.password = password;
-        this.roles = new HashSet<>();
-        this.roles.add(UserRole.USER); // Rôle par défaut
-    }
-
-    // 🔧 GETTERS & SETTERS DE BASE
-
-    public Long getId() {
-        return id;
-    }
-
-    public void setId(Long id) {
-        this.id = id;
-    }
-
-    public String getUsername() {
-        return username;
-    }
-
-    public void setUsername(String username) {
-        this.username = username;
-    }
-
-    public String getPassword() {
-        return password;
-    }
-
-    public void setPassword(String password) {
-        this.password = password;
-    }
-
-    public String getEmail() {
-        return email;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-    // 🎭 GETTERS & SETTERS RÔLES
-
-    public Set<UserRole> getRoles() {
-        return roles;
-    }
-
-    public void setRoles(Set<UserRole> roles) {
-        this.roles = roles;
-    }
-
-    // 🏢 GETTERS & SETTERS CLUB
-
-    public Club getClub() {
-        return club;
-    }
-
-    public void setClub(Club club) {
-        this.club = club;
-    }
-
-    // 📋 GETTERS & SETTERS ORGANISATEUR
-
-    public String getSiret() {
-        return siret;
-    }
-
-    public void setSiret(String siret) {
-        this.siret = siret;
-    }
-
-    public String getOrganizationName() {
-        return organizationName;
-    }
-
-    public void setOrganizationName(String organizationName) {
-        this.organizationName = organizationName;
-    }
-
-    public boolean isVerified() {
-        // Si 'verified' est NULL dans la DB, on retourne FALSE par défaut.
-        return verified != null ? verified : false;
-    }
-
-    public void setVerified(Boolean verified) {
-        this.verified = verified;
-    }
-
-    public LocalDate getVerifiedAt() {
-        return verifiedAt;
-    }
-
-    public void setVerifiedAt(LocalDate verifiedAt) {
-        this.verifiedAt = verifiedAt;
-    }
-
-    // 🔹 GETTERS RELATIONS
-
-    public Team getTeam() {
-        return team;
-    }
-
-    public void setTeam(Team team) {
-        this.team = team;
-    }
-
-    public List<Event> getEventsOrganized() {
-        return eventsOrganized;
-    }
-
-    public void setEventsOrganized(List<Event> eventsOrganized) {
-        this.eventsOrganized = eventsOrganized;
-    }
-
-    public List<EventRegistration> getRegistrations() {
-        return registrations;
-    }
-
-    public void setRegistrations(List<EventRegistration> registrations) {
-        this.registrations = registrations;
-    }
-
-    public List<Team> getTeamsCoached() {
-        return teamsCoached;
-    }
-
-    public void setTeamsCoached(List<Team> teamsCoached) {
-        this.teamsCoached = teamsCoached;
-    }
-
-    // 🔹 MÉTHODES HELPER POUR LES RÔLES
-
-    public boolean hasRole(UserRole role) {
-        return roles != null && roles.contains(role);
-    }
-
-    public boolean hasAnyRole(UserRole... rolesToCheck) {
-        return roles != null && roles.stream().anyMatch(Set.of(rolesToCheck)::contains);
-    }
-
-    public void addRole(UserRole role) {
-        if (this.roles == null) {
-            this.roles = new HashSet<>();
-        }
-        this.roles.add(role);
-    }
-
-    public void removeRole(UserRole role) {
-        if (this.roles != null) {
-            this.roles.remove(role);
-        }
-    }
-
-    public boolean canCreateEvent() {
-        return roles != null && roles.stream().anyMatch(UserRole::canCreateEvent);
-    }
-
-    public boolean canManageTeam() {
-        return roles != null && roles.stream().anyMatch(UserRole::canManageTeam);
-    }
-
-    public boolean canValidateRegistration() {
-        return roles != null && roles.stream().anyMatch(UserRole::canValidateRegistration);
-    }
-
-    public boolean canModerate() {
-        return roles != null && roles.stream().anyMatch(UserRole::canModerate);
-    }
-
-    // 🔹 MÉTHODES UTILITAIRES SUPPLÉMENTAIRES
-
-    public boolean isClubAdmin() {
-        return hasRole(UserRole.CLUB_ADMIN);
-    }
-
-    public boolean isCoach() {
-        return hasRole(UserRole.COACH);
-    }
-
-    public boolean isSuperAdmin() {
-        return hasRole(UserRole.SUPER_ADMIN);
-    }
-
-    // 🔹 SPRING SECURITY - Conversion en GrantedAuthority
-
+    // ==========================================================
+    // AUTHORITIES
+    // ==========================================================
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        if (roles == null || roles.isEmpty()) {
-            return List.of(new SimpleGrantedAuthority("ROLE_USER"));
-        }
         return roles.stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role.name()))
-                .collect(Collectors.toList());
+                .map(r -> new SimpleGrantedAuthority("ROLE_" + r.name()))
+                .toList();
     }
+    public boolean isSuperAdmin() { 
+    return roles.contains(UserRole.SUPER_ADMIN); 
+}
 
-    @Override
-    public String toString() {
-        return "User{" +
-                "id=" + id +
-                ", username='" + username + '\'' +
-                ", email='" + email + '\'' +
-                ", roles=" + roles +
-                ", club=" + (club != null ? club.getName() : "null") +
-                ", verified=" + verified +
-                '}';
-    }
+public boolean isClubAdmin() { 
+    return roles.contains(UserRole.CLUB_ADMIN); 
+}
 
-    public String getAvatarUrl() {
-        // 🎯 CRITIQUE : Retourne une image par défaut si le champ est null ou vide
-        if (avatarUrl == null || avatarUrl.isEmpty()) {
-            return "/assets/default-avatar.png"; // Utilisez le chemin vers votre avatar par défaut
-        }
-        return avatarUrl;
-    }
+public boolean isCoach() { 
+    return roles.contains(UserRole.COACH); 
+}
 
-    public void setAvatarUrl(String avatarUrl) {
-        this.avatarUrl = avatarUrl;
-    }
 }
